--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,4 +21,11 @@ jobs:
       - run:
           name: notify build is finished
           command: echo "The build is finished!"
+          
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
 
